Fix white space at top of page

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -2,4 +2,6 @@
   text-align: center;
   position: fixed;
   width: 100%;
+  background-color: blue;
+  top: 0;
 }
